phase 1 preprocess finish

--- a/baseline_phase2.ipynb
+++ b/baseline_phase2.ipynb
@@ -402,7 +402,7 @@
    "outputs": [],
    "source": [
     "# collect all temperature data\n",
-    "dir_temp = \"./temperature_cycle/\" \n",
+    "dir_temp = \"./temperature_cycle/phase2/\" \n",
     "suffix = \".csv\"\n",
     "\n",
     "all_df = pd.DataFrame(columns = [\"round\",\"dur_second\",\"T_min1\",\"T_max\",\"T_min2\"])\n",
