--- a/baseline_phase1.ipynb
+++ b/baseline_phase1.ipynb
@@ -1013,7 +1013,7 @@
     "df = df.iloc[df.t.values<stamp2,:]\n",
     "df = df.iloc[df.t.values>stamp1,:]\n",
     "print(df.shape)\n",
-    "# drop outliers \n",
+    "# drop outliers using statistic 3std regular\n",
     "_,ix = drop_outliers(df[\"Ic\"],filter_size = 64,threshold = 2)  # get outliers of Ic\n",
     "df = df.iloc[np.logical_not(ix),:]\n",
     "_,ix = drop_outliers(df[\"Uce\"],filter_size = 64,threshold = 2) # get outliers of Uce\n",
@@ -1025,7 +1025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
     "    df = df.loc[df.Tj_IGBT3_1.values< Tj+span, :]\n",
     "    return df\n",
     "\n",
-    "for Tj in [90,100,110,120,130,140,150,170]:\n",
+    "for Tj in [90,100,110,120,130,140,150,160,170]:\n",
     "    df_t = choose_data_by_Tj(df, Tj, 1)\n",
     "    df_t.to_csv(\"./temp/phase1_\"+str(Tj)+\"_T_U_I.csv\")\n",
     "\n",
@@ -1179,16 +1179,6 @@
     "# ax = fig.add_subplot(111, projection='3d') \n",
     "ax.scatter(df_t.Ic.values[-10000:],df_t.Uce.values[-10000:],-df_t.t.values[-10000:])\n",
     "ax.view_init(elev=elev,azim=azim)\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "plt.show()"
    ]
   },
